# libpebble-ble

./: Cargo.toml  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
crates/cobble/: Cargo.toml  build.rs
crates/cobble-client/: Cargo.toml
crates/cobble-client/src/: lib.rs
crates/cobble/src/: config.rs  db.rs  main.rs
crates/cobble/ui/: app.slint  charts.slint  theme.slint  types.slint  widgets.slint
crates/cobbled/: Cargo.toml
crates/cobbled/src/: call_monitor.rs  codec.rs  config.rs  config_watcher.rs  db.rs  http.rs  location.rs  main.rs  mpris_monitor.rs  service.rs  supervisor.rs  weather.rs
crates/cobbled/src/service/: mod.rs  state.rs
crates/libpebble-ble/: Cargo.toml
crates/libpebble-ble/src/: error.rs  lib.rs  pebble.rs  uuids.rs
crates/libpebble-ble/src/endpoints/: app_message.rs  app_run_state.rs  blob_db.rs  datalog.rs  health.rs  mod.rs  music.rs  phone_control.rs  phone_version.rs  ping.rs  reset.rs  screenshot.rs  system.rs  time.rs  watch_pref.rs
crates/libpebble-ble/src/pebble/: connection.rs  dispatch.rs  inner.rs  mod.rs
crates/libpebble-ble/src/transport/: agent.rs  gatt_server.rs  mod.rs  ppogatt.rs
crates/pebble-led/: Cargo.toml
crates/pebble-led/src/: config.rs  db.rs  main.rs  notification.rs  notify_monitor.rs  service.rs  supervisor.rs
data/: cobbled.service  pebble-led.service
debian/: changelog  control  pebble-led.install  postinst  prerm  rules
src/libpebble_ble/: __init__.py  appmessage.py  client_transport.py  exceptions.py  gatt_server.py  pebble.py  ppogatt.py  protocol.py  uuids.py
