[project]
name = "pebble-le-workspace"
version = "0.0.0"
description = "Workspace root for the pebble-le packages (library, proto contract, daemon, client)."
requires-python = ">=3.11"
# This is a virtual workspace root — it ships nothing itself, it just ties the
# member packages together so they resolve against each other locally.

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
libpebble-ble = { workspace = true }
pebble-le-proto = { workspace = true }

# Dev tooling shared across the workspace.
[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# dbus-fast reads method/signal/property type annotations as D-Bus signature
# STRINGS (e.g. "b", "u", "a{i(sv)}"). They are not Python type hints, so the
# annotation-related lints must not touch them.
"**/service.py" = ["UP037", "F821", "F722", "N802", "E501"]
"**/client.py" = ["UP037", "F821", "F722"]
