[project]
name = "pebble-le-workspace"
version = "0.0.0"
description = "Workspace root — Python client for the pebble-led Rust daemon."
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/pebble-le-client"]

# Dev tooling shared across the workspace.
[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/pebble-le-client/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# dbus-fast reads method/signal/property type annotations as D-Bus signature
# STRINGS (e.g. "b", "u", "a{i(sv)}"). They are not Python type hints, so the
# annotation-related lints must not touch them.
"**/service.py" = ["UP037", "F821", "F722", "N802", "E501"]
"**/client.py" = ["UP037", "F821", "F722"]
