[package]
name = "cobbled"
version = "0.4.0"
edition = "2021"
description = "Long-lived daemon owning the Pebble BLE connection."

[[bin]]
name = "cobbled"
path = "src/main.rs"

[dependencies]
libpebble-ble = { path = "../libpebble-ble" }
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
rusqlite = { version = "0.40", features = ["bundled"] }
png = "0.17"
notify = "6"
serde_json = "1"
hostname = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
