[package]
name = "libpebble-ble"
version = "0.3.0"
edition = "2021"
description = "Talk to a Pebble smartwatch over Bluetooth Low Energy from Linux."

[dependencies]
bluer = { version = "0.17", features = ["full"] }
dbus = { version = "0.9", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["now"] }
iana-time-zone = "0.1"
