[package]
name = "pebble-led"
version = "0.1.0"
edition = "2021"
description = "Long-lived daemon owning the Pebble BLE connection."

[[bin]]
name = "pebble-led"
path = "src/main.rs"

[dependencies]
libpebble-ble = { path = "../libpebble-ble" }
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
